Zavier's name added to file.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1><center>Names:</center></h1>
         <p><center>Emad Benchekroun</center></p>
+        <p><center>Zavier</center></p>
     </body>
 </html>
